--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
       <div class="top-icon" style="display: none">
         <div class="small-icon-container">
           <div class="dashboard-icons">
-            <div class="icons" onclick="goToPage(cart.php)">
+            <div class="icons" onclick="goToPage(cart.html)">
               <script src="https://cdn.lordicon.com/lordicon.js"></script>
               <lord-icon
                 src="/src/static/pages/js\Shopping_cart_custom_icon.json"
@@ -107,7 +107,7 @@
         <div class="dashboard-icons">
           <div
             class="icons"
-            onclick="goToPage('src/static/pages/products.php')"
+            onclick="goToPage('src/static/pages/products.html')"
           >
             <script src="https://cdn.lordicon.com/lordicon.js"></script>
             <lord-icon
@@ -125,7 +125,7 @@
         <div class="dashboard-icons">
           <div
             class="icons"
-            onclick="goToPage('src/static/pages/contact.php')"
+            onclick="goToPage('src/static/pages/contact.html')"
           >
             <script src="https://cdn.lordicon.com/lordicon.js"></script>
             <lord-icon
@@ -143,7 +143,7 @@
         <div class="dashboard-icons">
           <div
             class="icons"
-            onclick="goToPage('/src/static/pages/projects.php')"
+            onclick="goToPage('/src/static/pages/projects.html')"
           >
             <script src="/src/static/pages/js\Folder open_custom_icon.json"></script>
             <lord-icon
@@ -167,7 +167,7 @@
         <div class="dashboard-icons">
           <div
             class="icons"
-            onclick="goToPage('$reports.php')"
+            onclick="goToPage('$reports.html')"
           >
             <script src="/src/static/pages/js\Bar graph_custom_icon.json"></script>
             <lord-icon
@@ -185,7 +185,7 @@
         <div class="dashboard-icons">
           <div
             class="icons"
-            onclick="goToPage('/src/static/pages/templates.php')"
+            onclick="goToPage('/src/static/pages/reports.html')"
           >
             <script src="/src/static/pages/js\templates_custom_icon.json"></script>
             <lord-icon
