--- a/src/static/pages/accessibility.html
+++ b/src/static/pages/accessibility.html
@@ -8,7 +8,7 @@
       <link rel="canonical" href="https://pdubbssolutions.com" name="Pdubbs Solutions">
       <meta name="google-site-verification" content="BF8pc_URLQQbba5sQgIi_MVADChvuQJk0Pci3MhcWWc" />
       <script>
-         if (window.location.hostname === "pdssolutions.web.app") {
+         if (window.location.hostname === "pdubbssolutions.ca") {
            window.location.replace("https://pdubbssolutions.ca");
          }
       </script>
@@ -42,27 +42,27 @@
           <li>Incorporating assistive technologies, like screen readers and keyboard navigation.</li>
         </ul><br>
         <h2 class="accessibilityHeading" id="accessibilityHeading1" >Feedback</h2>
-        <p class="content-paragraph">We welcome your feedback on the accessibility of PDubbs Solutions. If you encounter any accessibility barriers, please contact us via <a href="/contact.html">this form</a> or at pdubbssolutions@gmail.com. </p><br>
+        <p class="content-paragraph">We welcome your feedback on the accessibility of PDubbs Solutions. If you encounter any accessibility barriers, please contact us via <a style="text-decoration: none; color: inherit;" href="/src/static/pages/contact.html">this form</a> or at pdubbssolutions@gmail.com. </p><br>
         <h2 class="accessibilityHeading" id="accessibilityHeading2">Conformance Status</h2>
         <p class="content-paragraph">Our website aims too comply with WCAG 2.1 Level AA standards. We are continously working to meet these guidelines and imporve the accessibility of all our digital properties.</p>
       </div>
     </div>
-    <footer>
-      <br><hr>
+    <footer style="margin-top: 5px;">
       <div style="display: inline; margin-top: 0px; text-decoration: none;"  class="auth-buttons"><a href="/src/static/pages/login.html">Login</a> | <a href="/src/static/pages/register.html">Register</a> | <a href="/src/static/pages/contact.html">Contact</a> | <a href="/src/static/pages/cart.html">Cart</a></div>
       <br>
       <div class="ref-buttons">
-         <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="/src/static/pages/termsandconditions.html">Terms and Conditions</a> |
-         <a style="font-size: 12px; text-decoration: none; color:olivedrab;" href="/src/static/pages/accessibility.html">Accessibility</a> |
-         <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="/src/static/pages/sources.php">Sources</a> | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/csspolicy.php">Policies &amp; Procedures</a>
+         <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="termsandconditions.html">Terms and Conditions</a> |
+         <a style="font-size: 12px; text-decoration: none; color:olivedrab;" href="accessibility.html">Accessibility</a> |
+         <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="sources.html">Sources</a>
+         | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/csspolicy.html">Policies</a> | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/cssprocedure.html"> Procedures</a>
       </div>
       <span style="display:inline; margin-top: 20px;" >Pdubbs Solutions |  Administrative &amp; Project Management Services</span><br>
       <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; text-align: center;"></div>
-      <img style=" justify-content:center; max-width: 100px; padding: 0; max-height: 100px; left: 360px;margin-top: -20px; cursor: pointer;  z-index: -999; vertical-align: middle;  position:absolute;" src="/src/static/images/Pdubbs-Logo.jpg" alt="logo" class="logo" id="footer-logo" onclick="goHome()" />
+      <img style=" justify-content:center; max-width: 100px; padding: 0; max-height: 100px; left: 340px;margin-top: -20px; cursor: pointer;  z-index: -999; vertical-align: middle;  position:absolute;" src="/src/static/images/Pdubbs-Logo.jpg" alt="logo" class="logo" id="footer-logo" onclick="goHome()" />
    </footer>
-<script type="text/javascript" src="/src/index.mjs"></script>
-<script type="text/javascript" src="/src/app.js"></script>
-<script type="text/javascript" src="/src/static/pages/js\express.js"></script>
+   <script type="text/javascript" src="/src/index.mjs"></script>
+   <script type="text/javascript" src="/src/app.js"></script>
+   <script type="text/javascript" src="/src/static/pages/js\express.js"></script>
 <script>
    function toggleTextarea() {
        var sessionOptions = document.getElementById("sessionOptions");
