--- a/src/static/pages/contact.html
+++ b/src/static/pages/contact.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE-edge" />
       <meta name="viewport" content="width=1200, initial-scale=1.0"/>
-      <meta http-equiv="refresh" content="url=https://pdssolutions.web.app" name="Pdubbs Solutions">
+      <meta http-equiv="refresh" content="url=https://pdubbssolutions.ca" name="Pdubbs Solutions">
       <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
       <link rel="stylesheet"  type="text/css" href="/src\static\styles.css" />
       <title>Pdubbs Solutions | Contact</title>
@@ -18,7 +18,7 @@
     <body> 
       
    <header>
-      <img style="z-index: -999; position: relative; top: 15px; max-width: 200px; padding: 0; display: block; left: 340px; cursor: pointer; max-height: 200px;" src="/src/static/images/Pdubbs-Logo.jpg" alt="logo" class="logo" onclick="goHome()" />
+      <img style="z-index: -999; position: relative; top: 15px; max-width: 200px; padding: 0; display: block; left: 310px; cursor: pointer; max-height: 200px;" src="/src/static/images/Pdubbs-Logo.jpg" alt="logo" class="logo" onclick="goHome()" />
   </header>
    <div class="contact-container" id="wrapper">
       <h1 class="headingText"><span> Contact Us</span></h1>
@@ -50,26 +50,28 @@
            <lablel for="message"></lablel>
            <textarea type="message" id="message" name="message" placeholder="Enter  Message for Pdubbs Solutions here:" rows="1.3rem" required></textarea>
            <label>
-            <input type="checkbox" id="agreement" required><p style="font-size: 14px;  margin-left: 125px; text-align: right; display:inline-block; position:relative; cursor: pointer;"> I, agree to be contacted by PDubbs Solutions</p></label>
+            <input type="checkbox" id="agreement" required><p style="font-size: 14px;  margin-left: 165px; text-align: right; display:inline-block; position:relative; cursor: pointer;"> I, agree to be contacted by PDubbs Solutions</p></label>
             <button style="display: block; margin-top: 3px; margin-left: 160px;" type="submit">Submit</button>
             </form>
             <div id="confirmationMessage" style="display:none;">
                <p class="content-paragraph">thank you, <span id="submittedName"></span>! PDubbs Solutions will respond to your request within 0-2 business days.</p>
             </div>    
          </div>
-   <script type="text/javascript" src="/src/index.mjs"></script>
-   <script type="text/javascript" src="/src/app.js"></script>
-   <script type="text/javascript" src="/src/static/pages/js\express.js"></script><br>
-   <footer> 
-   <div class="ref-buttons">
-      <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="termsandconditions.html">Terms and Conditions</a> |
-      <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="accessibility.html">Accessibility</a> |
-      <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="sources.html">Sources</a>
-      | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/csspolicy.html">Policies</a> | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/cssprocedure.html"> Procedures</a>
-   </div>
-   <span style="display:inline; margin-top: 20px;" >Pdubbs Solutions |  Administrative &amp; Project Management Services</span><br>
-   <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; text-align: center;"></div>
-   <img style=" justify-content:center; max-width: 100px; padding: 0; max-height: 100px; left: 380px;margin-top: -20px; cursor: pointer;  z-index: -999; vertical-align: middle;  position:absolute;" src="/src/static/images/Pdubbs-Logo.jpg" alt="logo" class="logo" id="footer-logo" onclick="goHome()" />
-   </footer>
+         <footer style="margin-top: 5px;">
+            <div style="display: inline; margin-top: 0px; text-decoration: none;"  class="auth-buttons"><a href="/src/static/pages/login.html">Login</a> | <a href="/src/static/pages/register.html">Register</a> | <a href="/src/static/pages/contact.html">Contact</a> | <a href="/src/static/pages/cart.html">Cart</a></div>
+            <br>
+            <div class="ref-buttons">
+               <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="termsandconditions.html">Terms and Conditions</a> |
+               <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="accessibility.html">Accessibility</a> |
+               <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="sources.html">Sources</a>
+               | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/csspolicy.html">Policies</a> | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/cssprocedure.html"> Procedures</a>
+            </div>
+            <span style="display:inline; margin-top: 20px;" >Pdubbs Solutions |  Administrative &amp; Project Management Services</span><br>
+            <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; text-align: center;"></div>
+            <img style=" justify-content:center; max-width: 100px; padding: 0; max-height: 100px; left: 340px;margin-top: -20px; cursor: pointer;  z-index: -999; vertical-align: middle;  position:absolute;" src="/src/static/images/Pdubbs-Logo.jpg" alt="logo" class="logo" id="footer-logo" onclick="goHome()" />
+         </footer>
+         <script type="text/javascript" src="/src/index.mjs"></script>
+         <script type="text/javascript" src="/src/app.js"></script>
+         <script type="text/javascript" src="/src/static/pages/js\express.js"></script>
 </body>
 </html>
