--- a/src/static/pages/login.html
+++ b/src/static/pages/login.html
@@ -15,7 +15,7 @@
    <header>
        <img style="z-index: -999; position: relative; top: 25px; max-width: 200px; padding: 0; display: block; margin: 0 auto; cursor: pointer; max-height: 200px;" src="/src/static/images/Pdubbs-Logo.jpg" alt="logo" class="logo" onclick="goHome()" />
    </header><h1 style=" margin-left: 110px;text-align: center; position: relative; padding:0;" >Login</h1>
-   <p style="text-align: center;">Forgot your password? <a href="/src/static/views/forgot-password.ejs" id="login" >Reset Now </a></p>
+   <p style="text-align: center;">Forgot your password? <a href="/src/static/views/forgot-password.js" id="login" >Reset Now </a></p>
    <form id="loginForm">
       <label for="username" aria-placeholder="Username"></label>
       <input type="text" id="username" name="username" placeholder="Username" required />
@@ -25,7 +25,7 @@
       <input type="password" id="password" name="password" placeholder="Password" required />
       <button style="margin-left: 160px;" type="submit">Login </button>
    </form>
-   <p style="text-align: center;">Want to reset your password? <a href="/src/static/views/reset-password.ejs" id="login1" >Reset Password </a></p>
+   <p style="text-align: center;">Want to reset your password? <a style="text-decoration: none; color: #a8738a;" href="/src\static\views\reset-password.js" id="login1" >Reset Password </a></p>
    <script>
       document.getElementById('loginForm').addEventListener('submit', function(event) {
          event.preventDefault();
@@ -34,25 +34,26 @@
          const password = document.getElementById('password').value;
 
          if (username && password) {
-            window.location.href = 'index.html';
+            window.location.href = '/index.html';
          }
       });
    </script>
 
-  <footer>
+<footer style="margin-top: 5px;">
    <div style="display: inline; margin-top: 0px; text-decoration: none;"  class="auth-buttons"><a href="/src/static/pages/login.html">Login</a> | <a href="/src/static/pages/register.html">Register</a> | <a href="/src/static/pages/contact.html">Contact</a> | <a href="/src/static/pages/cart.html">Cart</a></div>
    <br>
-      <div class="ref-buttons">
-         <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="/src/static/pages/termsandconditions.html">Terms and Conditions</a> |
-         <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="/src/static/pages/accessibility.html">Accessibility</a> |
-         <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="/src/static/pages/sources.html">Sources</a> | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/csspolicy.html">Policies</a> | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/cssprocedure.html"> Procedures</a>
-      </div>
-      <span style="display:inline; margin-top: 20px;" >Pdubbs Solutions |  Administrative &amp; Project Management Services</span><br>
-       <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; text-align: center;"></div>
-         <img style=" justify-content:center; max-width: 100px; padding: 0; max-height: 100px; left: 360px;margin-top: -20px; cursor: pointer;  z-index: -999; vertical-align: middle;  position:absolute;" src="/src/static/images/Pdubbs-Logo.jpg" alt="logo" class="logo" id="footer-logo" onclick="goHome()" />
+   <div class="ref-buttons">
+      <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="termsandconditions.html">Terms and Conditions</a> |
+      <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="accessibility.html">Accessibility</a> |
+      <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="sources.html">Sources</a>
+      | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/csspolicy.html">Policies</a> | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/cssprocedure.html"> Procedures</a>
+   </div>
+   <span style="display:inline; margin-top: 20px;" >Pdubbs Solutions |  Administrative &amp; Project Management Services</span><br>
+   <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; text-align: center;"></div>
+   <img style=" justify-content:center; max-width: 100px; padding: 0; max-height: 100px; left: 340px;margin-top: -20px; cursor: pointer;  z-index: -999; vertical-align: middle;  position:absolute;" src="/src/static/images/Pdubbs-Logo.jpg" alt="logo" class="logo" id="footer-logo" onclick="goHome()" />
 </footer>
-   <script type="text/javascript" src="/src/index.mjs"></script>
-   <script type="text/javascript" src="/src/app.js"></script>
-   <script type="text/javascript" src="/src/static/pages/js\express.js"></script>
+<script type="text/javascript" src="/src/index.mjs"></script>
+<script type="text/javascript" src="/src/app.js"></script>
+<script type="text/javascript" src="/src/static/pages/js\express.js"></script>
 </body>
 </html>
