--- a/src/static/pages/sources.html
+++ b/src/static/pages/sources.html
@@ -8,7 +8,7 @@
       <link rel="canonical" href="https://pdubbssolutions.com" name="Pdubbs Solutions">
       <meta name="google-site-verification" content="BF8pc_URLQQbba5sQgIi_MVADChvuQJk0Pci3MhcWWc" />
       <script>
-         if (window.location.hostname === "pdssolutions.web.app") {
+         if (window.location.hostname === "pdubbssolutions.ca") {
            window.location.replace("https://pdubbssolutions.ca");
          }
       </script>
