--- a/src/static/pages/login.html
+++ b/src/static/pages/login.html
@@ -15,7 +15,7 @@
    <header>
        <img style="z-index: -999; position: relative; top: 25px; max-width: 200px; padding: 0; display: block; margin: 0 auto; cursor: pointer; max-height: 200px;" src="/src/static/images/Pdubbs-Logo.jpg" alt="logo" class="logo" onclick="goHome()" />
    </header><h1 style=" margin-left: 110px;text-align: center; position: relative; padding:0;" >Login</h1>
-   <p style="text-align: center;">Forgot your password? <a href="/src/static/views/forgot-password.js" id="login" >Reset Now </a></p>
+   <p style="text-align: center;">Forgot your password? <a  class="btn navbutton" href="resetPassword" id="login" >Reset Now </a></p>
    <form id="loginForm">
       <label for="username" aria-placeholder="Username"></label>
       <input type="text" id="username" name="username" placeholder="Username" required />
