--- a/src/static/pages/register.html
+++ b/src/static/pages/register.html
@@ -17,7 +17,7 @@
         <h1 style="text-align: center; margin-left: 105px; position: absolute;" id="register">Registration</h1>
     </header>
     <section class="registation">
-      <p style="text-align: center;">Already have an account? <a href="/src/static/pages/login.html" id="login" >Login here</a></p>
+      <p style="text-align: center;">Already have an account? <a  class="btn navbutton" href="login" id="login" >Login here</a></p>
       <div class="register">
          <div >
      
