--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
       name="google-site-verification"
       content="BF8pc_URLQQbba5sQgIi_MVADChvuQJk0Pci3MhcWWc"
     />
+    <script src="https://www.google.com/recaptcha/enterprise.js?render=6LdLHH0qAAAAAL6rKWBW22yjZQNaHbKcumnSzwIp"></script>
     <script>
       if (window.location.hostname === "github") {
         window.location.replace("https://pdubbssolutions.ca");
