--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
       rel="stylesheet"
     />
-    <script src="/src/app.js"></script>
+    <script src="/public/app.js"></script>
 
   </head>
   <header style="margin-top:0px; flex-shrink: 0; flex-grow: 1;">
@@ -328,7 +328,7 @@
                     <option value="single">Single Session</option>
                     <option value="recurring">Request Recurring Sessions</option>
                 </select>
-                <script src="/src/app.js"></script>
+                <script src="/public/app.js"></script>
               
                 </div>
 
@@ -467,9 +467,9 @@
         onclick="goHome(index.html)"
       />
     </footer>
-    <script type="text/javascript" src="/src/index.mjs"></script>
-    <script type="text/javascript" src="/src/app.js"></script>
-    <script type="text/javascript" src="/src/static/pages/js\express.js"></script>
+    <script type="text/javascript" src="/public/index.mjs"></script>
+    <script type="text/javascript" src="/public/app.js"></script>
+    <script type="text/javascript" src="/src/public/express.js"></script>
     <script>
       function toggleTextarea() {
         var requestDocument = document.getElementById("requestDocument1");
