--- a/src/static/pages/termsandconditions.html
+++ b/src/static/pages/termsandconditions.html
@@ -273,9 +273,9 @@
       <span id="toggleUp2">&#8593;</span>
   </div>
   </body>
-   <script type="text/javascript" src="/src/index.mjs"></script>
-   <script type="text/javascript" src="/src/app.js"></script>
-   <script type="text/javascript" src="/src/static/pages/js\express.js"></script>
+   <script type="text/javascript" src="/public/index.mjs"></script>
+   <script type="text/javascript" src="/public/app.js"></script>
+   <script type="text/javascript" src="/src/public/express.js"></script>
    <hr>
    <footer style="z-index: 999">
    <div class="ref-buttons">
