--- a/src/static/pages/cssprocedure.html
+++ b/src/static/pages/cssprocedure.html
@@ -208,9 +208,9 @@
    <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; text-align: center;"></div>
    <img style=" justify-content:center; max-width: 100px; padding: 0; max-height: 100px; left: 340px;margin-top: -20px; cursor: pointer;  z-index: -999; vertical-align: middle;  position:absolute;" src="/src/static/images/Pdubbs-Logo.jpg" alt="logo" class="logo" id="footer-logo" onclick="goHome(index.html)" />
 </footer>
-<script type="text/javascript" src="/src/index.mjs"></script>
-<script type="text/javascript" src="/src/app.js"></script>
-<script type="text/javascript" src="/src/static/pages/js\express.js"></script>
+<script type="text/javascript" src="/public/index.mjs"></script>
+<script type="text/javascript" src="/public/app.js"></script>
+<script type="text/javascript" src="/src/public/express.js"></script>
 
    </body>
 </html>
